# project-management-platform

./: .gitignore  CodeOfCode.md  README.md
vcs/: .gitignore  CMakeLists.txt  CMakePresets.json  CodeOfCode.md  LanguageSubset.md  vcpkg.json
vcs/shared/cli-preprocessor/: CMakeLists.txt
vcs/shared/cli-preprocessor/src/: CliActionsContainer.cppm  CliCommandExecutor.cppm  CliCommandParameters.cppm  CliPreprocessor.cppm
vcs/shared/cli-preprocessor/tests/: CMakeLists.txt  CliActionsContainerTests.cpp  CliCommandExecutorTests.cpp
vcs/tests/: CMakeLists.txt
vcs/vcs-client/: CMakeLists.txt
vcs/vcs-client/src/: cli.ixx  core.ixx  main.c  main.cpp
vcs/vcs-client/src/cli/: CliActionsContainer.cppm  CliActionsContainer.ixx  CliCommandExecutor.cppm  CliCommandExecutor.ixx  cli.cppm  cli.ixx
vcs/vcs-client/src/commands/: Commands.cppm  Version.cppm
vcs/vcs-client/tests/: CMakeLists.txt
vcs/vcs-server/: CMakeLists.txt
vcs/vcs-server/src/: core.ixx  main.cc  main.cpp
vcs/vcs-server/src/commands/: Commands.cppm  Version.cppm
vcs/vcs-server/tests/: CMakeLists.txt
